2014-08-28  Ken Brown  <kbrown@cornell.edu>

	* configure.ac (HYBRID_MALLOC): New macro; define to use gmalloc
	before dumping and the system malloc after dumping.  Define on
	Cygwin.  (Bug#18222)

2014-08-28  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (appdatadir): New variable.
	(install-etc, uninstall, clean): Handle etc/emacs.appdata.xml.

2014-08-27  Paul Eggert  <eggert@cs.ucla.edu>

	Improve robustness of new string-collation code (Bug#18051).
	* configure.ac (newlocale): Check for this, not for uselocale.

2014-08-26  Dmitry Antipov  <dmantipov@yandex.ru>

	Detect features needed to handle C stack overflows.
	* configure.ac: Check for sigaltstack and related sigaction
	support.  Unconditionally check for sigsetjmp and siglongjmp.
	(HAVE_STACK_OVERFLOW_HANDLING): Define if we can support it.

	(HAVE_LINUX_SYSINFO): Avoid false positive on Solaris.

2014-08-25  Ken Brown  <kbrown@cornell.edu>

	* configure.ac (G_SLICE_ALWAYS_MALLOC): Remove obsolete macro.

2014-08-25  Christoph Scholtes  <cschol2112@gmail.com>

	* INSTALL.REPO: Remove reference to obsolete configure scripts
	on non-Posix platforms (Bug#18323).

2014-08-24  Michael Albinus  <michael.albinus@gmx.de>

	* configure.ac: Check also for the uselocale function.  (Bug#18051)

2014-08-23  Karol Ostrovsky  <karol.ostrovsky@gmail.com>  (tiny change)

	* configure.ac: Accept "*-mingw*", not just "*-mingw32", as
	canonical name of a MinGW build, because using MSYS2 'uname'
	produces "MINGW64".

2014-08-21  Ken Brown  <kbrown@cornell.edu>

	* configure.ac (HAVE_XPM): Explain the use of CPPFLAGS in the
	Cygwin-w32 build.  (Bug#18302)

2014-08-11  Paul Eggert  <eggert@cs.ucla.edu>

	Don't prevent random file systems from being unmounted (Bug#18232).
	This fix relies on having the 'fchdir' function, and on having
	"." be searchable (or at least readable, on platforms lacking O_SEARCH),
	but that's good enough to handle the vast majority of cases and the